# barnacle

./: .gitignore  Cargo.toml  ERROR_HANDLING.md  LICENSE  README.md  test_api_key_denial.sh  test_api_key_redis.sh  test_api_key_scenarios.sh  test_rate_limiter.sh
examples/: advanced.rs  api_key_redis_test.rs  api_key_test.rs  api_key_validation.rs  basic.rs  custom_validator_example.rs  error_integration.rs  generic_key_extractor.rs  redis_setup.rs  simple_key_extractor.rs  test_rate_limit.rs
src/: api_key_middleware.rs  api_key_store.rs  backoff.rs  error.rs  key_extractor.rs  lib.rs  middleware.rs  redis_store.rs  types.rs
tests/: api_key_integration_tests.rs  memory_store.rs  mod.rs  rate_limiter_integration_tests.rs  store_tests.rs  unit_tests.rs
