[package]
name = "barnacle-rs"
version = "0.1.0"
edition = "2021"
description = "Rate limiting middleware for Axum with Key Extractor and API key validation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/zyphelabs/barnacle-rs"
homepage = "https://github.com/zyphelabs/barnacle-rs"
keywords = ["rate-limiting", "axum", "middleware", "api-key", "key-extractor"]
categories = ["web-programming::http-server", "asynchronous", "caching"]
authors = ["Zyphe Inc"]
rust-version = "1.70"

[features]
default = ["redis"]
redis = ["dep:redis", "dep:deadpool-redis"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.32.2", features = ["tokio-comp"], optional = true }
deadpool-redis = { version = "0.21.1", features = [
    "rt_tokio_1",
], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1.0"
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tower-http = { version = "0.6", features = ["trace"] }
